--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -12,34 +12,54 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="Assets/images/logo_v1.png"></a></div> 
+        <div class="logo"><a href="index.html"><img src="Assets/images/favicon.ico"></a></div>
         <nav>
-            <a href="histoire.html"><button><span id="HISTOIRE">HISTOIRE</span></button></a>
-            <a href="economie.html"><button><span id="ECONOMIE">ECONOMIE</span></button></a>
-            <a href="fonctionnement.html"><button><span id="FONCTIONNEMENT">FONCTIONNEMENT</span></button></a>
-            <a href="ethique.html"><button><span id="ETHIQUE">ETHIQUE</span></button></a>
+            <a href="histoire.html"><button><span id="HISTOIRE" class="anton-regular-nav">HISTOIRE</span></button></a>
+            <a href="economie.html"><button><span id="ECONOMIE" class="anton-regular-nav">ECONOMIE</span></button></a>
+            <a href="fonctionnement.html"><button><span id="FONCTIONNEMENT" class="anton-regular-nav">FONCTIONNEMENT</span></button></a>
+            <a href="ethique.html"><button><span id="ETHIQUE" class="anton-regular-nav">ETHIQUE</span></button></a>
         </nav>
     </header>
     <section class="intro">
-        <img class="fond1" src="Assets/images/fond-fonctionnement.jpg" alt="fond-fonctionnement">
-        <div style="display:flex; justify-content: center;">
+        <img class="fond1" src="Assets/images/img_fonctionnement/fond-fonctionnement.jpg" alt="fond-fonctionnement">
+        <div style="display: flex;">
             <img class="graph" src="Assets/images/img_fonctionnement/graph_fonctionnement.jpeg" alt="Graphique fonctionnement YesWeHack">
+            <h1 class="titre">Fonctionnement <br> YesWeHack</h1>
         </div>
     </section>
     <section class="paragraphe1">
         <div>
             <h2 class="anton-regular">Comment devenir Hunter ?</h2>
-            <p>
-                bjeveihahfviyhfhefhzifzygfgezfhbzfyfufez
-            </p>
+                <ul>
+                    <li class="chau-philomene-one-regular">Dojo: la plateforme d’entraînement de YesWeHack : challenges, sandbox... pour s'améliorer et optenir des badges et donc améliorer son profil.</li>
+                    <li class="chau-philomene-one-regular">Participer aux programmes publics: respecter le scope, bien rédiger son rapport...</li>
+                    <li class="chau-philomene-one-regular">Participer aux événements Live Hacking et hunt régulièrement (pour se faire repérer et gagner des points).</li>
+                </ul>
         </div>
-        <a href="https://dojo-yeswehack.com/" ><img class="img_droite" src="Assets/images/img_fonctionnement/dojo.jpeg" alt="Logo Dojo_YesWeHack"></a>
+        <a href="https://dojo-yeswehack.com/" target="_blank"><img class="img_1" src="Assets/images/img_fonctionnement/dojo.jpeg" alt="Logo Dojo_YesWeHack"></a>
     </section>
     <section class="paragraphe2">
-        <a href="https://yeswehack.com/ranking?period=All" ><img class="img_gauche" src="Assets/images/img_fonctionnement/rank.jpeg" alt="Image rang hunter"></a>
+        <a href="https://yeswehack.com/ranking?period=All" target="_blank"><img class="img_2" src="Assets/images/img_fonctionnement/rank.jpeg" alt="Image rang hunter"></a>
         <div>
-            <h2>le classement des hunters</h2>
+            <h2 class="anton-regular">le classement des hunters</h2>
+            <ul>
+                <li class="chau-philomene-one-regular">Points gagnés lorsque tes rapports sont validés et résolus. Ex. +7 points pour un rapport accepté + résolu ; les duplicates (= rapport de vulnérabilité déjà soumis par un autre hunter pour la même faille sur la même cible.) rapportent une fraction, les invalides peuvent coûter des points.</li>
+                <li class="chau-philomene-one-regular">Le niveau de sévérité / la grille de récompense influe sur le nombre de points attribués : une faille à fort impact rapporte plus de points qu’une faille mineure.</li>
+            </ul>
         </div>
+    </section>
+    <section class="paragraphe3">
+        <div>
+            <h2 class="anton-regular">Des collaborations uniques</h2>
+                <ul class="chau-philomene-one-regular"> 
+                    <p> Pourquoi ? (entreprises/custumer)</p>
+                    <li> Ces marques utilisent YesWeHack pour renforcer leur cybersécurité tout en bénéficiant de la puissance de la communauté.</li>
+                    <p> Pourquoi ? (YesWeHack)</p>
+                    <li>Travailler avec de grandes marques renforce la réputation de YesWeHack comme acteur majeur européen du bug bounty.</li>
+                    <li>Cela attire d’autres entreprises qui voient que des géants du luxe, de l’agroalimentaire ou de la cosmétique leur font confiance.</li>
+                </ul>
+        </div>
+        <a href="https://www.yeswehack.com/fr/blog/customer-stories" target="_blank"><img class="img_3" src="Assets/images/img_fonctionnement/collab.jpeg" alt="image collaboration YesWeHack"></a>
     </section>
     <footer>
         <p>Baptiste AUBRY (Baubry2-iut90)</p>
