--- a/ethique.html
+++ b/ethique.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Éthique des hackers — Projet SAE</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+   <link rel="icon" type="image/x-icon" href="Assets/images/favicon.ico">
   <link rel="stylesheet" href="Assets/css/style-ethique.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
