--- a/ethique.html
+++ b/ethique.html
@@ -37,7 +37,7 @@
     <br><br>
 
     <section class="section-ethique">
-      <h2 class="visually-hidden">Section éthique</h2>
+      <h2>Section éthique</h2>
       <div class="bloc-ethique">
         <img src="Assets/images/img_ethique/hackeur-ethique.png" alt="Hacker éthique travaillant sur un ordinateur">
         <p class="chau-philomene-one-regular">
@@ -50,7 +50,7 @@
     <br>
 
     <section class="section-introduction">
-      <h2 class="visually-hidden">Section introduction</h2>
+      <h2>Section introduction</h2>
       <img src="Assets/images/img_ethique/intro.png" alt="Illustration hackers responsables">
       <div class="bloc-introduction">
         <p class="chau-philomene-one-regular">
@@ -64,7 +64,7 @@
     <br><br>
 
     <section class="section-principes">
-      <h2 class="visually-hidden">Section principes</h2>
+      <h2>Section principes</h2>
       <img src="Assets/images/img_ethique/principe.hack.jpg" alt="Illustration des principes éthiques">
       <div class="bloc-principes">
         <p class="chau-philomene-one-regular">
@@ -80,7 +80,7 @@
     <br><br>
 
     <section class="section-benefices">
-      <h2 class="visually-hidden">Section bénéfices</h2>
+      <h2 >Section bénéfices</h2>
       <img src="Assets/images/img_ethique/bug-bounty.png" alt="Infographie sur le Bug Bounty">
       <div class="bloc-benefices">
         <p class="chau-philomene-one-regular">
@@ -94,7 +94,7 @@
     <br><br>
 
     <section class="section-cas">
-      <h2 class="visually-hidden">Section cas pratiques</h2>
+      <h2>Section cas pratiques</h2>
       <img src="Assets/images/img_ethique/collab.jpg" alt="Équipe de cybersécurité collaborant">
       <div class="bloc-cas">
         <p class="chau-philomene-one-regular">
