--- a/ethique.html
+++ b/ethique.html
@@ -14,11 +14,9 @@
 </head>
 <body>
   <header>
-    <div class="logo">
-      <a href="index.html">
-        <img src="Assets/images/logo-removebg-preview.png" alt="Logo du site">
-      </a>
-    </div>
+      <div class="logo">
+        <a href="index.html"><img src="Assets/images/favicon.ico"></a>
+      </div>
     <nav class="navigation">
       <a href="histoire.html" id="HISTOIRE" class="bouton-nav">HISTOIRE</a>
       <a href="economie.html" id="ECONOMIE" class="bouton-nav">ECONOMIE</a>
