--- a/histoire.html
+++ b/histoire.html
@@ -21,12 +21,12 @@
 <body>
 <!-- Navigation commune -->
     <header>
-        <div class="logo"><a href="index.html"><img src="Assets/images/favicon.ico" alt="logo du site"></a></div>
+        <div class="logo"><a href="index.html"><img src="Assets/images/favicon.ico" alt="logo site"></a></div>
         <nav>
-            <a href="histoire.html"><button><span id="HISTOIRE" class="anton-regular">HISTOIRE</span></button></a>
-            <a href="economie.html"><button><span id="ECONOMIE" class="anton-regular">ECONOMIE</span></button></a>
-            <a href="fonctionnement.html"><button><span id="FONCTIONNEMENT" class="anton-regular">FONCTIONNEMENT</span></button></a>
-            <a href="ethique.html"><button><span id="ETHIQUE" class="anton-regular">ETHIQUE</span></button></a>
+            <a href="histoire.html"><span id="HISTOIRE" class="anton-regular">HISTOIRE</span></a>
+            <a href="economie.html"><span id="ECONOMIE" class="anton-regular">ECONOMIE</span></a>
+            <a href="fonctionnement.html"><span id="FONCTIONNEMENT" class="anton-regular">FONCTIONNEMENT</span></a>
+            <a href="ethique.html"><span id="ETHIQUE" class="anton-regular">ETHIQUE</span></a>
         </nav>
     </header>
 
@@ -109,44 +109,44 @@
             <div class="histoiore">
                 <h1 class="anton-regular">Histoire</h1>
                 <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
+                    <a class="chau-philomene-one-regular" href="#"><p>Debut</p></a>
                     <br>
-                    <a href="#"><p>Expension</p></a>
+                    <a class="chau-philomene-one-regular" href="#"><p>Expansion</p></a>
                     <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
+                    <a class="chau-philomene-one-regular" href="#"><p>Aujourd'hui et demain</p></a>
                     <br>
                 </div>
             </div>
             <div class="economie">
                 <h1 class="anton-regular">Economie</h1>
                 <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
+                    <a class="chau-philomene-one-regular" href="#"><p>Debut</p></a>
                     <br>
-                    <a href="#"><p>Expension</p></a>
+                    <a class="chau-philomene-one-regular" href="#"><p>Expension</p></a>
                     <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
+                    <a class="chau-philomene-one-regular" href="#"><p>Aujourd'hui</p></a>
                     <br>
                 </div>
             </div>
             <div class="fonctionnement">
                 <h1 class="anton-regular">Fonctionnement</h1>
                 <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
+                    <a class="chau-philomene-one-regular" href="#"><p>Debut</p></a>
                     <br>
-                    <a href="#"><p>Expension</p></a>
+                    <a class="chau-philomene-one-regular" href="#"><p>Expension</p></a>
                     <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
+                    <a class="chau-philomene-one-regular" ++href="#"><p>Aujourd'hui</p></a>
                     <br>
                 </div>
             </div>           
             <div class="ethiques">
                 <h1 class="anton-regular">Ethique</h1>
                 <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
+                    <a class="chau-philomene-one-regular" href="#"><p>Debut</p></a>
                     <br>
-                    <a href="#"><p>Expension</p></a>
+                    <a class="chau-philomene-one-regular" href="#"><p>Expension</p></a>
                     <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
+                    <a class="chau-philomene-one-regular" href="#"><p>Aujourd'hui</p></a>
                     <br>
                 </div>
             </div>             
@@ -170,7 +170,7 @@
             <a id="logo_SL4" href="https://github.com/yeswehack"><img src="github.png" alt="logo github"></a>
             <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="logo github"></a>
         </div>     
-        <p id="mentions">@2025 SAES1-05-06 IUT-NFC Bryan BITTIGER, BUT informatique, A1</p>
+        <p class="chau-philomene-one-regular" id="mentions">@2025 SAES1-05-06 IUT-NFC Bryan BITTIGER, BUT informatique, A1</p>
     </footer>
 
 </body>
