--- a/histoire.html
+++ b/histoire.html
@@ -135,7 +135,7 @@
                     <br>
                     <a class="chau-philomene-one-regular" href="#"><p>Expension</p></a>
                     <br>
-                    <a class="chau-philomene-one-regular" ++href="#"><p>Aujourd'hui</p></a>
+                    <a class="chau-philomene-one-regular" href="#"><p>Aujourd'hui</p></a>
                     <br>
                 </div>
             </div>           
@@ -167,7 +167,7 @@
             <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg" alt="logo yeswehack"></a>
             <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="logo X (anciennemnt twitter)"></a>
             <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png" alt="logo linkedin"></a>
-            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="logo github"></a>
+            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="github.png" alt="logo github"></a>
             <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="logo github"></a>
         </div>     
         <p class="chau-philomene-one-regular" id="mentions">@2025 SAES1-05-06 IUT-NFC Bryan BITTIGER, BUT informatique, A1</p>
