--- a/ethique.html
+++ b/ethique.html
@@ -174,3 +174,5 @@
         </div>     
         <p id="mentions">@2025 SAES1-05-06 IUT-NFC Yanis ALLALI , BUT informatique, A1</p>
     </footer>
+  </body>
+</html>
