--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="Assets/images/favicon.ico"></a></div>
+        <div class="logo"><a href="index.html"><img src="Assets/images/favicon.ico" alt="logo"></a></div>
         <nav>
             <a href="histoire.html"><button><span id="HISTOIRE" class="anton-regular-nav">HISTOIRE</span></button></a>
             <a href="economie.html"><button><span id="ECONOMIE" class="anton-regular-nav">ECONOMIE</span></button></a>
@@ -28,33 +28,35 @@
         </div>
     </section>
     <section class="paragraphe1">
-        <div>
+        <div class="chau-philomene-one-regular">
             <h2 class="anton-regular">Comment devenir Hunter ?</h2>
                 <ul>
-                    <li class="chau-philomene-one-regular">Dojo: la plateforme d’entraînement de YesWeHack : challenges, sandbox... pour s'améliorer et optenir des badges et donc améliorer son profil.</li>
-                    <li class="chau-philomene-one-regular">Participer aux programmes publics: respecter le scope, bien rédiger son rapport...</li>
-                    <li class="chau-philomene-one-regular">Participer aux événements Live Hacking et hunt régulièrement (pour se faire repérer et gagner des points).</li>
+                    <li>Dojo: la plateforme d’entraînement de YesWeHack : challenges, sandbox... pour s'améliorer et optenir des badges et donc améliorer son profil.</li>
+                    <li>Participer aux programmes publics: respecter le scope, bien rédiger son rapport...</li>
+                    <li>Participer aux événements Live Hacking et hunt régulièrement (pour se faire repérer et gagner des points).</li>
                 </ul>
         </div>
         <a href="https://dojo-yeswehack.com/" target="_blank"><img class="img_1" src="Assets/images/img_fonctionnement/dojo.jpeg" alt="Logo Dojo_YesWeHack"></a>
     </section>
     <section class="paragraphe2">
         <a href="https://yeswehack.com/ranking?period=All" target="_blank"><img class="img_2" src="Assets/images/img_fonctionnement/rank.jpeg" alt="Image rang hunter"></a>
-        <div>
+        <div class="chau-philomene-one-regular">
             <h2 class="anton-regular">le classement des hunters</h2>
             <ul>
-                <li class="chau-philomene-one-regular">Points gagnés lorsque tes rapports sont validés et résolus. Ex. +7 points pour un rapport accepté + résolu ; les duplicates (= rapport de vulnérabilité déjà soumis par un autre hunter pour la même faille sur la même cible.) rapportent une fraction, les invalides peuvent coûter des points.</li>
-                <li class="chau-philomene-one-regular">Le niveau de sévérité / la grille de récompense influe sur le nombre de points attribués : une faille à fort impact rapporte plus de points qu’une faille mineure.</li>
+                <li>Points gagnés lorsque tes rapports sont validés et résolus. Ex. +7 points pour un rapport accepté + résolu ; les duplicates (= rapport de vulnérabilité déjà soumis par un autre hunter pour la même faille sur la même cible.) rapportent une fraction, les invalides peuvent coûter des points.</li>
+                <li>Le niveau de sévérité / la grille de récompense influe sur le nombre de points attribués : une faille à fort impact rapporte plus de points qu’une faille mineure.</li>
             </ul>
         </div>
     </section>
     <section class="paragraphe3">
-        <div>
+        <div class="chau-philomene-one-regular">
             <h2 class="anton-regular">Des collaborations uniques</h2>
-                <ul class="chau-philomene-one-regular"> 
-                    <p> Pourquoi ? (entreprises/custumer)</p>
+                <h3> Pourquoi ? (entreprises/custumer)</h3>
+                <ul> 
                     <li> Ces marques utilisent YesWeHack pour renforcer leur cybersécurité tout en bénéficiant de la puissance de la communauté.</li>
-                    <p> Pourquoi ? (YesWeHack)</p>
+                </ul>
+                <h3> Pourquoi ? (YesWeHack)</h3>
+                <ul>
                     <li>Travailler avec de grandes marques renforce la réputation de YesWeHack comme acteur majeur européen du bug bounty.</li>
                     <li>Cela attire d’autres entreprises qui voient que des géants du luxe, de l’agroalimentaire ou de la cosmétique leur font confiance.</li>
                 </ul>
@@ -62,7 +64,71 @@
         <a href="https://www.yeswehack.com/fr/blog/customer-stories" target="_blank"><img class="img_3" src="Assets/images/img_fonctionnement/collab.jpeg" alt="image collaboration YesWeHack"></a>
     </section>
     <footer>
-        <p>Baptiste AUBRY (Baubry2-iut90)</p>
+        <div class="liens">
+            <div class="histoiore">
+                <h1 class="anton-regular">Histoire</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>
+            <div class="economie">
+                <h1 class="anton-regular">Economie</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>
+            <div class="fonctionnement">
+                <h1 class="anton-regular">Fonctionnement</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>           
+            <div class="ethiques">
+                <h1 class="anton-regular">Ethique</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>             
+        </div>
+        <img src="Assets/images/logo_ywh.png" id="YWH">
+        <img src="Assets/images/favicon.ico" id="Y">
+        <br>
+        <br>
+        <br>
+        <div class="suivre">
+            <p id="Suivez-les">Suivez-les</p>
+            <p id="Suivez-nous">Suivez-nous</p>
+        </div>
+        <br>
+
+        <div class="reseaux">
+            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg"></a>
+            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png"></a>
+            <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png"></a>
+            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png"></a>
+            <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png"></a>
+        </div>     
+        <p id="mentions">@2025 SAES1-05-06 IUT-NFC Baptiste AUBRY, BUT informatique, A1</p>
     </footer>
 
 </body>
