--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <section class="intro">
-        <img class="fond1" src="Assets/images/img_fonctionnement/fond-fonctionnement.jpg" alt="fond-fonctionnement">
+        <img class="fond1" src="Assets/images/fond_acc.jpg" alt="fond-fonctionnement">
         <div style="display: flex;">
             <img class="graph" src="Assets/images/img_fonctionnement/graph_fonctionnement.jpeg" alt="Graphique fonctionnement YesWeHack">
             <h1 class="titre">Fonctionnement <br> YesWeHack</h1>
