--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,11 +13,13 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="Assets/images/favicon.ico"></a></div>
+        <div class="logo">
+            <a href="index.html"><img src="Assets/images/favicon.ico" alt="Logo YesWeHack"></a>
+        </div>
         <nav>
             <a href="histoire.html"><span id="HISTOIRE" class="anton-regular">HISTOIRE</span></a>
             <a href="economie.html"><span id="ECONOMIE" class="anton-regular">ECONOMIE</span></a>
-            <a href="fonctionnement.html"><span id="FONCTIONNEMENT" class="anton-regular">FONCTIONNEMENT</span><a>
+            <a href="fonctionnement.html"><span id="FONCTIONNEMENT" class="anton-regular">FONCTIONNEMENT</span></a>
             <a href="ethique.html"><span id="ETHIQUE" class="anton-regular">ETHIQUE</span></a>
         </nav>
     </header>
@@ -26,10 +28,10 @@
             <h1 class="anton-regular">Yes We Hack</h1>
             <p>Paie une protection, pas la rançon</p>
         </div>
-        <img src="Assets/images/fond_acc.jpg">
+        <img src="Assets/images/fond_acc.jpg" alt="Fond d'accueil YesWeHack">
     </div>
     <div class="contenu_1">
-        <img src="Assets/images/fond_menu.jpg">
+        <img src="Assets/images/fond_menu.jpg" alt="Fond de menu YesWeHack">
         <div class="ligne1">
             <div class="block_1">
                 <h1 class="anton-regular">Qu'est-ce que c'est ?</h1>
@@ -61,22 +63,24 @@
         </div>
         <div class="ligne2">
             <div class="block_1">
-                    <a href="https://www.google.fr/maps/place/Yes+We+Hack/@48.8533233,2.3619131,19.04z/data=!4m6!3m5!1s0x47e67122ad1f091f:0xb0630068fc799b4!8m2!3d48.8533675!4d2.3621824!16s%2Fg%2F11h7vj6bcg?entry=ttu&g_ep=EgoyMDI1MTAwNi4wIKXMDSoASAFQAw%3D%3D"><img src="Assets/images/carte.png"></a>
-                    <div id="liens">
-                        <a href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg"></a>
-                        <a href="https://twitter.com/yeswehack"><img src="Assets/images/x.png"></a>
-                        <a href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png"></a>
-                        <a href="https://github.com/yeswehack"><img src="Assets/images/github.png"></a>
-                    </div>
+                <a href="https://www.google.fr/maps/place/Yes+We+Hack/@48.8533233,2.3619131,19.04z">
+                    <img src="Assets/images/carte.png" alt="Carte de localisation YesWeHack">
+                </a>
+                <div id="liens">
+                    <a href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg" alt="Logo officiel de YesWeHack"></a>
+                    <a href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="Logo de Twitter (X)"></a>
+                    <a href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png" alt="Logo LinkedIn"></a>
+                    <a href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="Logo GitHub"></a>
+                </div>
             </div>
             <div class="block_2">
-                <h1 class="anton-regular">Comment ca marche?</h1>
+                <h1 class="anton-regular">Comment ça marche?</h1>
                 <hr>
-                <p>Les organisations publient des programmes de bug bounty, et les chercheurs en sécurité soumettent leurs découvertes de failles afin quelles soient corriger.</p>
+                <p>Les organisations publient des programmes de bug bounty, et les chercheurs en sécurité soumettent leurs découvertes de failles afin qu’elles soient corrigées.</p>
             </div>
             <div class="block_3">
-                <img id="pas_sec" src="Assets/images/hacké.png">
-                <img  id="sec" src="Assets/images/securisé.jpg">
+                <img id="pas_sec" src="Assets/images/hacké.png" alt="Système piraté">
+                <img id="sec" src="Assets/images/securisé.png" alt="Système sécurisé">
             </div>           
         </div>
         <div class="ligne3">
@@ -91,43 +95,39 @@
                     <p>Tout savoir sur l'économie de YesWeHack</p>
                 </div>
                 <div class="lien">
-                    <a href="economie.html"><img src="Assets/images/fleche.png"></a>
+                    <a href="economie.html"><img src="Assets/images/fleche.png" alt="Flèche vers la page économie"></a>
                 </div>
             </div>
             <div class="block_3">
-                <h1 class="anton-regular">Decouvrir YesWeHack</h1>
+                <h1 class="anton-regular">Découvrir YesWeHack</h1>
                 <p>Cliquez pour en savoir plus !</p>
-                <a href="https://www.yeswehack.com/fr"><img src="Assets/images/site27.png"></a>
+                <a href="https://www.yeswehack.com/fr"><img src="Assets/images/site27.png" alt="Visuel du site YesWeHack"></a>
             </div>           
         </div>
-        
     </div>
     <div class="contenu_2">
-        <a href="histoire.html"><button id="lien_histoire"><span class="anton-regular" style="font-style: italic;">En savoir +</span></button></a>
+        <button id="lien_histoire" href="histoire.html"><span class="anton-regular" style="font-style: italic;">En savoir +</span></button>
         <div id="lien_shadow"></div>
-            <img src="Assets/images/fond_histoire.png">
+        <img src="Assets/images/tst.png" alt="Image de fond pour la section histoire">
         <div class="presentation_1">
             <div>
                 <h1 class="anton-regular">La Direction</h1>
             </div>
             <div class="partie_1">
-                <p class="chau-philomene-one-regular-italic">Guillaume Vassault-Houlière 
-                    Co-Founder & CEO</p>
-               <img src="Assets/images/guillome.jpg">
+                <p class="chau-philomene-one-regular-italic">Guillaume Vassault-Houlière Co-Founder & CEO</p>
+                <img src="Assets/images/guillome.jpg" alt="Photo de Guillaume Vassault-Houlière, CEO">
             </div>
             <div class="partie_2">
-                <p class="chau-philomene-one-regular-italic">Romain Lecoeuvre
-                    Co-founder & COO </p>
-                <img src="Assets/images/romain.jpg"> 
+                <p class="chau-philomene-one-regular-italic">Romain Lecoeuvre Co-founder & COO</p>
+                <img src="Assets/images/romain.jpg" alt="Photo de Romain Lecoeuvre, COO">
             </div>
             <div class="partie_3">
-                <p class="chau-philomene-one-regular-italic">Kevin Gallerin<br>
-                    APAC CEO </p>
-                <img src="Assets/images/kevin.jpg"> 
+                <p class="chau-philomene-one-regular-italic">Kevin Gallerin<br>APAC CEO</p>
+                <img src="Assets/images/kevin.jpg" alt="Photo de Kevin Gallerin, CEO APAC">
             </div>
         </div>
         <div class="presentation_2">
-            <img src="Assets/images/salarié.avif">
+            <img src="Assets/images/salarié.avif" alt="Équipe de collaborateurs YesWeHack">
             <h1 class="anton-regular">130 Collaborateurs</h1>
             <p>Ses 130 experts se répartissent entre ses pôles de R&D, Triage, Customer Success, et Opérations.</p>
         </div>
@@ -140,65 +140,50 @@
             <div class="histoiore">
                 <h1 class="anton-regular">Histoire</h1>
                 <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
-                    <br>
-                    <a href="#"><p>Expension</p></a>
-                    <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
-                    <br>
+                    <a href="#"><p>Début</p></a><br>
+                    <a href="#"><p>Expansion</p></a><br>
+                    <a href="#"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>
             <div class="economie">
                 <h1 class="anton-regular">Economie</h1>
                 <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
-                    <br>
-                    <a href="#"><p>Expension</p></a>
-                    <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
-                    <br>
+                    <a href="#"><p>Début</p></a><br>
+                    <a href="#"><p>Expansion</p></a><br>
+                    <a href="#"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>
             <div class="fonctionnement">
                 <h1 class="anton-regular">Fonctionnement</h1>
                 <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
-                    <br>
-                    <a href="#"><p>Expension</p></a>
-                    <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
-                    <br>
+                    <a href="#"><p>Début</p></a><br>
+                    <a href="#"><p>Expansion</p></a><br>
+                    <a href="#"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>           
             <div class="ethiques">
                 <h1 class="anton-regular">Ethique</h1>
                 <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
-                    <br>
-                    <a href="#"><p>Expension</p></a>
-                    <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
-                    <br>
+                    <a href="#"><p>Début</p></a><br>
+                    <a href="#"><p>Expansion</p></a><br>
+                    <a href="#"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>             
         </div>
-        <img src="Assets/images/logo_ywh.png" id="YWH">
-        <img src="Assets/images/favicon.ico" id="Y">
-        <br>
-        <br>
-        <br>
+        <img src="Assets/images/logo_ywh.png" id="YWH" alt="Logo principal YesWeHack">
+        <img src="Assets/images/favicon.ico" id="Y" alt="Favicon YesWeHack">
+        <br><br><br>
         <div class="suivre">
             <p id="Suivez-les">Suivez-les</p>
             <p id="Suivez-nous">Suivez-nous</p>
         </div>
         <br>
-
         <div class="reseaux">
-            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg"></a>
-            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png"></a>
-            <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png"></a>
-            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png"></a>
-            <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png"></a>
+            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg" alt="Logo officiel YesWeHack"></a>
+            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="Logo Twitter (X)"></a>
+            <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png" alt="Logo LinkedIn"></a>
+            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="Logo GitHub officiel"></a>
+            <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="Logo GitHub du projet étudiant"></a>
         </div>     
         <p id="mentions">@2025 SAES1-05-06 IUT-NFC Noe LAHURTE, BUT informatique, A1</p>
     </footer>
