--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="contenu_2">
         <button id="lien_histoire" href="histoire.html"><span class="anton-regular" style="font-style: italic;">En savoir +</span></button>
         <div id="lien_shadow"></div>
-        <img src="Assets/images/tst.png" alt="Image de fond pour la section histoire">
+        <img src="Assets/images/fond_histoire.png" alt="Image de fond pour la section histoire">
         <div class="presentation_1">
             <div>
                 <h1 class="anton-regular">La Direction</h1>
