--- a/ethique.html
+++ b/ethique.html
@@ -15,7 +15,7 @@
 <body>
   <header>
       <div class="logo">
-        <a href="index.html"><img src="Assets/images/favicon.ico"></a>
+        <a href="index.html"><img src="Assets/images/favicon.ico" alt="LOGO"></a>
       </div>
     <nav class="navigation">
       <a href="histoire.html" id="HISTOIRE" class="bouton-nav">HISTOIRE</a>
@@ -154,8 +154,8 @@
                 </div>
             </div>             
         </div>
-        <img src="Assets/images/logo_ywh.png" id="YWH">
-        <img src="Assets/images/favicon.ico" id="Y">
+        <img src="Assets/images/logo_ywh.png" id="YWH" alt="YWK">
+        <img src="Assets/images/favicon.ico" id="Y" alt="lOGO">
         <br>
         <br>
         <br>
@@ -166,11 +166,11 @@
         <br>
 
         <div class="reseaux">
-            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg"></a>
-            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png"></a>
-            <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png"></a>
-            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png"></a>
-            <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png"></a>
+            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg" alt="YES" ></a>
+            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="twitter"></a>
+            <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png" alt="Linkedin"></a>
+            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="github"></a>
+            <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="github"></a>
         </div>     
         <p id="mentions">@2025 SAES1-05-06 IUT-NFC Yanis ALLALI , BUT informatique, A1</p>
     </footer>
