--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
     </div>
     <div class="contenu_2">
-        <button id="lien_histoire" href="histoire.html"><span class="anton-regular" style="font-style: italic;">En savoir +</span></button>
+        <a id="lien_histoire" href="histoire.html"><span class="anton-regular" style="font-style: italic;">En savoir +</span></a>
         <div id="lien_shadow"></div>
         <img src="Assets/images/fond_histoire.png" alt="Image de fond pour la section histoire">
         <div class="presentation_1">
