--- a/histoire.html
+++ b/histoire.html
@@ -107,7 +107,7 @@
     <footer>
         <div class="liens">
             <div class="histoiore">
-                <h1 class="anton-regular">Histoire</h1>
+                <h3 class="anton-regular">Histoire</h1>
                 <div class="sous-liens">
                     <a class="chau-philomene-one-regular" href="#"><p>Debut</p></a>
                     <br>
@@ -118,35 +118,35 @@
                 </div>
             </div>
             <div class="economie">
-                <h1 class="anton-regular">Economie</h1>
+                <h3 class="anton-regular">Economie</h1>
                 <div class="sous-liens">
-                    <a class="chau-philomene-one-regular" href="#"><p>Debut</p></a>
+                    <a class="chau-philomene-one-regular" href="#"></a>
                     <br>
-                    <a class="chau-philomene-one-regular" href="#"><p>Expension</p></a>
+                    <a class="chau-philomene-one-regular" href="#"></a>
                     <br>
-                    <a class="chau-philomene-one-regular" href="#"><p>Aujourd'hui</p></a>
+                    <a class="chau-philomene-one-regular" href="#"></a>
                     <br>
                 </div>
             </div>
             <div class="fonctionnement">
-                <h1 class="anton-regular">Fonctionnement</h1>
+                <h3 class="anton-regular">Fonctionnement</h1>
                 <div class="sous-liens">
-                    <a class="chau-philomene-one-regular" href="#"><p>Debut</p></a>
+                    <a class="chau-philomene-one-regular" href="#"></a>
                     <br>
-                    <a class="chau-philomene-one-regular" href="#"><p>Expension</p></a>
+                    <a class="chau-philomene-one-regular" href="#"></a>
                     <br>
-                    <a class="chau-philomene-one-regular" href="#"><p>Aujourd'hui</p></a>
+                    <a class="chau-philomene-one-regular" href="#"></a>
                     <br>
                 </div>
             </div>           
             <div class="ethiques">
-                <h1 class="anton-regular">Ethique</h1>
+                <h3 class="anton-regular">Ethique</h1>
                 <div class="sous-liens">
-                    <a class="chau-philomene-one-regular" href="#"><p>Debut</p></a>
+                    <a class="chau-philomene-one-regular" href="#"></a>
                     <br>
-                    <a class="chau-philomene-one-regular" href="#"><p>Expension</p></a>
+                    <a class="chau-philomene-one-regular" href="#"></a>
                     <br>
-                    <a class="chau-philomene-one-regular" href="#"><p>Aujourd'hui</p></a>
+                    <a class="chau-philomene-one-regular" href="#"></a>
                     <br>
                 </div>
             </div>             
@@ -160,14 +160,11 @@
             <p id="Suivez-les">Suivez-les</p>
             <p id="Suivez-nous">Suivez-nous</p>
         </div>
-        <br>
-        <hr id="SL_hr">
-        <hr id="SN_hr">
         <div class="reseaux">
             <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg" alt="logo yeswehack"></a>
             <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="logo X (anciennemnt twitter)"></a>
             <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png" alt="logo linkedin"></a>
-            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="github.png" alt="logo github"></a>
+            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="logo github"></a>
             <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="logo github"></a>
         </div>     
         <p class="chau-philomene-one-regular" id="mentions">@2025 SAES1-05-06 IUT-NFC Bryan BITTIGER, BUT informatique, A1</p>
