--- a/ethique.html
+++ b/ethique.html
@@ -107,72 +107,23 @@
     <br><br>
   </main>
 
- <footer>
-        <div class="liens">
-            <div class="histoiore">
-                <h1 class="anton-regular">Histoire</h1>
-                <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
-                    <br>
-                    <a href="#"><p>Expension</p></a>
-                    <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
-                    <br>
-                </div>
-            </div>
-            <div class="economie">
-                <h1 class="anton-regular">Economie</h1>
-                <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
-                    <br>
-                    <a href="#"><p>Expension</p></a>
-                    <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
-                    <br>
-                </div>
-            </div>
-            <div class="fonctionnement">
-                <h1 class="anton-regular">Fonctionnement</h1>
-                <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
-                    <br>
-                    <a href="#"><p>Expension</p></a>
-                    <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
-                    <br>
-                </div>
-            </div>           
-            <div class="ethiques">
-                <h1 class="anton-regular">Ethique</h1>
-                <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
-                    <br>
-                    <a href="#"><p>Expension</p></a>
-                    <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
-                    <br>
-                </div>
-            </div>             
-        </div>
-        <img src="Assets/images/logo_ywh.png" id="YWH" alt="YWK">
-        <img src="Assets/images/favicon.ico" id="Y" alt="lOGO">
-        <br>
-        <br>
-        <br>
-        <div class="suivre">
-            <p id="Suivez-les">Suivez-les</p>
-            <p id="Suivez-nous">Suivez-nous</p>
-        </div>
-        <br>
+<footer>
+    <div class="suivre">
+        <p id="Suivez-nous">Suivez-nous</p>
+    </div>
 
-        <div class="reseaux">
-            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg" alt="YES" ></a>
-            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="twitter"></a>
-            <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png" alt="Linkedin"></a>
-            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="github"></a>
-            <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="github"></a>
-        </div>     
-        <p id="mentions">@2025 SAES1-05-06 IUT-NFC Yanis ALLALI , BUT informatique, A1</p>
-    </footer>
+    <div class="reseaux";>
+        <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg" alt="YES"></a>
+        <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="twitter"></a>
+        <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png" alt="Linkedin"></a>
+        <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="github"></a>
+        <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="github"></a>
+    </div>     
+
+    <p id="mentions">
+        © 2025 — Page Éthique créée par Yanis ALLALI
+    </p>
+</footer>
+
   </body>
 </html>
