--- a/histoire.html
+++ b/histoire.html
@@ -120,33 +120,33 @@
             <div class="economie">
                 <h3 class="anton-regular">Economie</h3>
                 <div class="sous-liens">
-                    <a class="chau-philomene-one-regular" href="#"></a>
+                    <a class="chau-philomene-one-regular" href="economie.html"></a>
                     <br>
-                    <a class="chau-philomene-one-regular" href="#"></a>
+                    <a class="chau-philomene-one-regular" href="economie.html"></a>
                     <br>
-                    <a class="chau-philomene-one-regular" href="#"></a>
+                    <a class="chau-philomene-one-regular" href="economie.html"></a>
                     <br>
                 </div>
             </div>
             <div class="fonctionnement">
                 <h3 class="anton-regular">Fonctionnement</h3>
                 <div class="sous-liens">
-                    <a class="chau-philomene-one-regular" href="#"></a>
+                    <a class="chau-philomene-one-regular" href="fonctionnement.html">Comment devenir Hunter ?</a>
                     <br>
-                    <a class="chau-philomene-one-regular" href="#"></a>
+                    <a class="chau-philomene-one-regular" href="fonctionnement.html">Le classement des hunters</a>
                     <br>
-                    <a class="chau-philomene-one-regular" href="#"></a>
+                    <a class="chau-philomene-one-regular" href="fonctionnement.html">Des collaborations uniques</a>
                     <br>
                 </div>
             </div>           
             <div class="ethiques">
                 <h3 class="anton-regular">Ethique</h3>
                 <div class="sous-liens">
-                    <a class="chau-philomene-one-regular" href="#"></a>
+                    <a class="chau-philomene-one-regular" href="ethique.html"></a>
                     <br>
-                    <a class="chau-philomene-one-regular" href="#"></a>
+                    <a class="chau-philomene-one-regular" href="ethique.html"></a>
                     <br>
-                    <a class="chau-philomene-one-regular" href="#"></a>
+                    <a class="chau-philomene-one-regular" href="ethique.html"></a>
                     <br>
                 </div>
             </div>             
