--- a/ethique.html
+++ b/ethique.html
@@ -108,22 +108,25 @@
   </main>
 
 <footer>
-    <div class="suivre">
-        <p id="Suivez-nous">Suivez-nous</p>
+   
+    <div class="logos-footer">
+        <img src="Assets/images/logo_ywh.png" alt="Logo entreprise" id="logo-entreprise">
+        <img src="Assets/images/favicon.ico" alt="Mon logo" id="logo-perso">
     </div>
 
-    <div class="reseaux";>
+    
+    <div class="reseaux">
         <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg" alt="YES"></a>
-        <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="twitter"></a>
+        <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="Twitter"></a>
         <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png" alt="Linkedin"></a>
-        <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="github"></a>
-        <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="github"></a>
-    </div>     
+        <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="GitHub"></a>
+        <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="GitHub perso"></a>
+    </div>
 
-    <p id="mentions">
-        © 2025 — Page Éthique créée par Yanis ALLALI
-    </p>
+   
+    <p id="mentions">@2025 SAES1-05-06 IUT-NFC Yanis ALLALI , BUT informatique, A1</p>
 </footer>
+
 
   </body>
 </html>
